<resources>
    <string name="app_name">Shape Generator</string>
    <string name="select_your_shape">Select your shape</string>
    <string name="shapes">Shapes</string>

    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="rectangle">Rectangle</string>
    <string name="enter_value">Enter value</string>
    <string name="generate_shape">Generate Shape</string>
    <string name="enter_length">Enter length</string>
    <string name="enter_side">Enter side</string>
    <string name="enter_width">Enter width</string>
    <string name="enter_radius">Enter radius</string>
    <string name="px">px</string>
    <string name="your_artboard">Your Artboard</string>
    <string name="select_color">Select Color</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="black">Black</string>
    <string name="error_large_radius">Radius of the circle is too large to displayed below</string>
    <string name="error_large_length">Length of the rectangle is too large to displayed below</string>
    <string name="error_large_width">Width of the rectangle is too large to displayed below</string>
    <string name="error_large_side">Side of the square is too large to displayed below</string>

    <string-array name="shape_array">
        <item>@string/circle</item>
        <item>@string/square</item>
        <item>@string/rectangle</item>
    </string-array>

    <string-array name="color_array">
        <item>@string/purple</item>
        <item>@string/red</item>
        <item>@string/green</item>
        <item>@string/black</item>
    </string-array>
</resources>